# meshplot

./: pyproject.toml
examples/: tutorial.ipynb
meshplot/: Viewer.py  plot.py
